세그먼트와 광고이벤트 자리배치 교체

--- a/packus/web/static/css/base.scss
+++ b/packus/web/static/css/base.scss
@@ -4330,7 +4330,9 @@ License - nucleoapp.com/license/
   width: 25vw;
   position: relative;
 }
-
+.list-styled-none {
+  list-style: none;
+}
 
 
 
