--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -82,7 +82,7 @@
             >
             <a href="/event/total" id="pills-segments">
               <i class="nc-icon nc-spaceship"></i>
-              <p>광고 Event Tracking</p>
+              <p>Click Event</p>
             </a>
             <!-- <ul class="list-styled-none mt-0">
               <li class="sub-sidebar-brand"
