분석기간 11월 변경 및 sms 퀵사이트 추가

--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -84,6 +84,15 @@
               <i class="nc-icon nc-spaceship"></i>
               <p>Click Event</p>
             </a>
+            <ul class="list-styled-none mt-0">
+              <li class="sub-sidebar-brand"
+                  {% if menu == 'sms' %}
+                      class="active"
+                    {% endif %}
+                  >
+                  <a href="/event/sms" class="p-0 mt-0">―   SMS<span class="sub_icon fa fa-hdd-o"></span></a>
+              </li>
+            </ul>
             <!-- <ul class="list-styled-none mt-0">
               <li class="sub-sidebar-brand"
                 {% if menu == 'catalog' %}
