--- a/packus/web/templates/segments/seg_reports.html
+++ b/packus/web/templates/segments/seg_reports.html
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col align-self-end">
+        <div class="col text-right mx-2">
             <button class="btn btn-primary m-0" id="surf-btn" onclick="">조회</button>
         </div>
     </div>
