sms 대시보드 추가

--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -47,125 +47,33 @@
                 </li>
             </ul>
           </li>
-          <!-- <li
-              {% if menu == 'segments' %}
-                class="active"
-              {% endif %}
-            >
-            <a href="/segments/segments" id="pills-segments">
-              <i class="nc-icon nc-bulb-63"></i>
-              <p>세그먼트</p>
-            </a>
-            <ul class="list-styled-none mt-0">
-                <li class="sub-sidebar-brand"
-                    {% if menu == 'segments' %}
-                        class="active"
-                      {% endif %}
-                    >
-                    <a href="/segments/segments" class="p-0 mt-0">―   세그먼트 생성<span class="sub_icon fa fa-hdd-o"></span></a>
-                </li>
-            </ul>
-            <ul class="list-styled-none mt-0">
-                <li class="sub-sidebar-brand"
-                    {% if menu == 'seg_reports' %}
-                        class="active"
-                      {% endif %}
-                    >
-                    <a href="/segments/seg_reports" class="p-0 mt-0">―   세그먼트<span class="sub_icon fa fa-hdd-o"></span></a>
-                </li>
-            </ul>
-          </li> -->
           <li
               {% if menu == 'event' %}
                 class="active"
               {% endif %}
             >
             <a href="/event/total" id="pills-segments">
-              <i class="nc-icon nc-spaceship"></i>
+              <i class="nc-icon nc-bulb-63"></i>
               <p>Click Event</p>
             </a>
             <ul class="list-styled-none mt-0">
-              <li class="sub-sidebar-brand"
-                  {% if menu == 'sms' %}
-                      class="active"
-                    {% endif %}
-                  >
-                  <a href="/event/sms" class="p-0 mt-0">―   SMS<span class="sub_icon fa fa-hdd-o"></span></a>
-              </li>
-            </ul>
-            <!-- <ul class="list-styled-none mt-0">
-              <li class="sub-sidebar-brand"
-                {% if menu == 'catalog' %}
-                    class="active"
-                  {% endif %}
-                >
-                <a href="/event/total" class="p-0 mt-0">―   전체 개요<span class="sub_icon fa fa-hdd-o"></span></a>
-                <ul class="list-styled-none mt-0">
-                  <li class="sub-sidebar-brand"
-                      {% if menu == 'total' %}
-                          class="active"
-                        {% endif %}
-                      >
-                      <a href="/event/total" class="p-0 mt-0">―   Total<span class="sub_icon fa fa-hdd-o"></span></a>
-                  </li>
-                  <li class="sub-sidebar-brand"
-                      {% if menu == 'upjong' %}
-                          class="active"
-                        {% endif %}
-                      >
-                      <a href="/event/upjong" class="p-0 mt-0">―   업종<span class="sub_icon fa fa-hdd-o"></span></a>
-                  </li>
-                  <li class="sub-sidebar-brand"
-                      {% if menu == 'area' %}
-                          class="active"
-                        {% endif %}
-                      >
-                      <a href="/event/area" class="p-0 mt-0">―   지역<span class="sub_icon fa fa-hdd-o"></span></a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <ul class="list-styled-none mt-0">
-              <li class="sub-sidebar-brand"
-                {% if menu == 'sample' %}
-                    class="active"
-                  {% endif %}
-                >
-                <a href="/event/sample" class="p-0">―   OKPOS 정기 Event<span class="sub_icon fa fa-hdd-o"></span></a>
-                <ul class="list-styled-none mt-0">
-                  <li class="sub-sidebar-brand"
-                      {% if menu == 'sample' %}
-                          class="active"
-                        {% endif %}
-                      >
-                      <a href="/event/sample" class="p-0 mt-0">―   샘플신청<span class="sub_icon fa fa-hdd-o"></span></a>
-                  </li>
-                  <li class="sub-sidebar-brand"
-                      {% if menu == 'order' %}
-                          class="active"
-                        {% endif %}
-                      >
-                      <a href="/event/order" class="p-0 mt-0">―   소량주문<span class="sub_icon fa fa-hdd-o"></span></a>
-                  </li>
-                  <li class="sub-sidebar-brand"
-                    {% if menu == 'shop' %}
+                <li class="sub-sidebar-brand"
+                    {% if menu == 'event' %}
                         class="active"
                       {% endif %}
                     >
-                    <a href="/event/shop" class="p-0 mt-0">―   언택트 장보기<span class="sub_icon fa fa-hdd-o"></span></a>
-                  </li>
-                </ul>
-              </li>
+                    <a href="/event/total" class="p-0 mt-0">―   Click Event<span class="sub_icon fa fa-hdd-o"></span></a>
+                </li>
             </ul>
             <ul class="list-styled-none mt-0">
-              <li class="sub-sidebar-brand"
-                  {% if menu == 'catalog' %}
-                      class="active"
-                    {% endif %}
-                  >
-                  <a href="/event/catalog" class="p-0">―   카달로그 Event<span class="sub_icon fa fa-hdd-o"></span></a>
-              </li>
-            </ul> -->
+                <li class="sub-sidebar-brand"
+                    {% if menu == 'sms' %}
+                        class="active"
+                      {% endif %}
+                    >
+                    <a href="/event/sms" class="p-0 mt-0">―   SMS<span class="sub_icon fa fa-hdd-o"></span></a>
+                </li>
+            </ul>
           </li>
           <li
               {% if menu == 'segments' %}
