클러스터 업데이트(202012)

--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -80,13 +80,14 @@
                             매출, 최근 12개월 주문수, 평균 주문금액, 마지막 주문채널, 마지막 주문매출, 지난달 이메일 열람여부, 2개월전 이메일 열람여부, 가입 후 첫 구매까지의 기간, 총거래 기간,
                             최초주문채널, 최초주문매출
                       </div> -->
-                      <div class="row pb-2">
+                      <div class="row pb-3">
                         <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                          <p class="text-center justify-content-center align-content-center m-0">CLASS 1</p>
                           <div class="h-100 text-center">
                             <img src="/static/img/cluster/class1_cluster.png" height="150" alt="클라스1 클러스터" />
                           </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 py-2">
+                        <div class="col-lg-8 col-md-8 col-sm-8 py-4">
                           <ul class="pl-1">
                             <li>1-a: 떠날 준비하는 충성고객(mobile 채널)<span class="float-right text-muted">132명</span></li>
                             <li>1-b: 충성고객(write 채널)<span class="float-right text-muted">250명</span></li>
@@ -95,13 +96,14 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="row pb-2">
+                      <div class="row pb-3">
                         <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                          <p class="text-center justify-content-center align-content-center m-0">CLASS 2</p>
                           <div class="h-100 text-center">
                             <img src="/static/img/cluster/class2_cluster.png" height="150" alt="클라스2 클러스터" />
                           </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 py-2">
+                        <div class="col-lg-8 col-md-8 col-sm-8 py-4">
                           <ul class="pl-1">
                             <li>2-a: 꾸준한 저텐션 고객(write 채널<span class="float-right text-muted">343명</span></li>
                             <li>2-b: 1등급 꿈나무 고객(mobile 채널)<span class="float-right text-muted">367명</span></li>
@@ -110,27 +112,29 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 col-sm-6">
-                      <div class="row pb-2">
+                    <div class="col-lg-6 col-md-6 col-sm-6 pt-3">
+                      <div class="row pb-3">
                         <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                          <p class="text-center justify-content-center align-content-center m-0">CLASS 3</p>
                           <div class="h-100 text-center">
                             <img src="/static/img/cluster/class3_cluster.png" height="150" alt="클라스3 클러스터" />
                           </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 py-2">
+                        <div class="col-lg-8 col-md-8 col-sm-8 py-4">
                           <ul class="pl-1">
                             <li>3-a: 긴가민가하다 떠나버린 고객(pc 채널)<span class="float-right text-muted">1053명</span></li>
                             <li>3-b: 아직 미련 남은 저텐션 고객(write 채널)<span class="float-right text-muted">352명</span></li>
                           </ul>
                         </div>
                       </div>
-                      <div class="row pb-2">
+                      <div class="row pb-3">
                         <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                          <p class="text-center justify-content-center align-content-center m-0">CLASS 4</p>
                           <div class="h-100 text-center">
                             <img src="/static/img/cluster/class4_cluster.png" height="150" alt="클라스4 클러스터" />
                           </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 py-2">
+                        <div class="col-lg-8 col-md-8 col-sm-8 py-4">
                           <ul class="pl-1">
                             <li>4-a: 걸음마 고객(write 채널)<span class="float-right text-muted">386명</span></li>
                             <li>4-b: 걸음마 고객(mobile 채널)<span class="float-right text-muted">744명</span></li>
@@ -138,13 +142,14 @@
                           </ul>
                         </div>
                       </div>
-                      <div class="row pb-2">
+                      <div class="row pb-3">
                         <div class="col-lg-4 col-md-4 col-sm-4 px-1">
+                          <p class="text-center justify-content-center align-content-center m-0">CLASS 5</p>
                           <div class="h-100 text-center">
-                            <img src="/static/img/cluster/class4_cluster.png" height="150" alt="클라스4 클러스터" />
+                            <img src="/static/img/cluster/class5_cluster.png" height="150" alt="클라스4 클러스터" />
                           </div>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 py-2">
+                        <div class="col-lg-8 col-md-8 col-sm-8 py-4">
                           <ul class="pl-1">
                             <li>5-a: 거래 없는 저관여 고객<span class="float-right text-muted">592명</span></li>
                             <li>5-b: 거래 없는 극저관여 고객<span class="float-right text-muted">98명</span></li>
@@ -1270,7 +1275,7 @@
 
                   <div class="row mb-3">
                     <div class="col-lg-6 col-md-6 col-sm-6">
-                      <div class="bg-light gather-box px-2 h-100">
+                      <div class="bg-light gather-box h-100" style="padding-left: 110px; padding-right: 110px;">
                         <ul class="p-3">
                           <li>전체의 14%</li>
                           <li>가장 많은 고객군</li>
@@ -1298,7 +1303,7 @@
                       </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6">
-                      <div class="bg-light gather-box px-2 h-100">
+                      <div class="bg-light gather-box h-100" style="padding-left: 110px; padding-right: 110px;">
                         <ul class="p-3">
                           <li>전체의 5%</li>
                           <li>약 200일간 거래 중</li>
@@ -1606,12 +1611,15 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="card card-stats">
-              <div class="card-header border-bottom py-2 countCardHeader">
-                <p class="m-0" style="font-size: 16px;">고객 리스트</p>
+              <div class="card-header border-bottom py-2">
+                <h5 class="p-2 m-0 font-weight-bold">CLASS 변동 회원(반기마다 UPDATE)</h5>
               </div>
               <div class="card-body p-0 m-0" style="height: 450px;">
-                <!-- <iframe src="https://52.78.186.240/s/packus/goto/08b50ebb30ae1ab2040d32e54faaf5f6" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe> -->
-                <iframe src="https://52.78.186.240/s/packus/goto/e65d0fff054faafddb36f60f2037329e" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                <!-- <iframe src="https://52.78.186.240/s/packus/goto/e65d0fff054faafddb36f60f2037329e" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe> -->
+                <iframe src="https://52.78.186.240/s/packus/goto/3f2fd33832930e2cb190dfe31c577842" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                  <p class="m-0 text-muted float-right">※ 대각선에 위치한 고객은 2020년 CLASS 변동없이 유지된 회원임</p>
+                </div>
               </div>
             </div>
           </div>
