2020하반기 클러스터 업데이트 후 수정2

--- a/packus/web/templates/rfm/cluster.html
+++ b/packus/web/templates/rfm/cluster.html
@@ -1612,14 +1612,14 @@
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="card card-stats">
               <div class="card-header border-bottom py-2">
-                <h5 class="p-2 m-0 font-weight-bold">CLASS 변동 회원(반기마다 UPDATE)</h5>
+                <h5 class="p-2 m-0 font-weight-bold">고객리스트</h5>
               </div>
               <div class="card-body p-0 m-0" style="height: 450px;">
-                <!-- <iframe src="https://52.78.186.240/s/packus/goto/e65d0fff054faafddb36f60f2037329e" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe> -->
-                <iframe src="https://52.78.186.240/s/packus/goto/3f2fd33832930e2cb190dfe31c577842" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
-                <div class="col-lg-12 col-md-12 col-sm-12">
+                <iframe src="https://52.78.186.240/s/packus/goto/e65d0fff054faafddb36f60f2037329e" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe>
+                <!-- <iframe src="https://52.78.186.240/s/packus/goto/3f2fd33832930e2cb190dfe31c577842" height="100%" width="100%" frameborder="0" style="border-radius: .8rem;"></iframe> -->
+                <!-- <div class="col-lg-12 col-md-12 col-sm-12">
                   <p class="m-0 text-muted float-right">※ 대각선에 위치한 고객은 2020년 CLASS 변동없이 유지된 회원임</p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
