--- a/packus/web/templates/index.html
+++ b/packus/web/templates/index.html
@@ -57,6 +57,24 @@
               <p>Click Event</p>
             </a>
             <ul class="list-styled-none mt-0">
+              <li class="sub-sidebar-brand"
+                  {% if menu == 'okpos' %}
+                      class="active"
+                    {% endif %}
+                  >
+                  <a href="/event/okpos" class="p-0 mt-0">―   OKPOS 간편주문<span class="sub_icon fa fa-hdd-o"></span></a>
+              </li>
+            </ul>
+            <ul class="list-styled-none mt-0">
+              <li class="sub-sidebar-brand"
+                  {% if menu == 'ncafe' %}
+                      class="active"
+                    {% endif %}
+                  >
+                  <a href="/event/ncafe" class="p-0 mt-0">―   네이버 카페<span class="sub_icon fa fa-hdd-o"></span></a>
+              </li>
+            </ul>
+            <ul class="list-styled-none mt-0">
                 <li class="sub-sidebar-brand"
                     {% if menu == 'sms' %}
                         class="active"
@@ -111,6 +129,10 @@
         {% include "rfm/cluster.html" %}
       {% elif menu == 'total' %}
         {% include "event/total.html" %}
+      {% elif menu == 'okpos' %}
+        {% include "event/okpos.html" %}
+      {% elif menu == 'ncafe' %}
+        {% include "event/ncafe.html" %}
       {% elif menu == 'sms' %}
         {% include "event/sms.html" %}
       {% elif menu == 'upjong' %}
